# cv_portfolio

Alokator plików/: DESCRIPTION.txt  makefile  tested_declarations.h
Analiza danych Soybean/: DESCRIPTION.txt  ProjektSoyBean.ipynb
Aplikacja Shopping List/: DESCRIPTION.txt  Product.java  ShoppingListApp.java
Odpowiednik programu cron/: CMakeLists.txt  DESCRIPTION.txt  main.c  makefile
Parking samochodowy/Program/: carpark_entry.py  carpark_init.py  parking_log.txt
Parser kontenerów plikowych FAT 12/: CMakeLists.txt  DESCRIPTION.txt  makefile
ProjektSocialWall/: SocialWall.sql
System logowania/: CMakeLists.txt  DESCRIPTION.txt  main.h  makefile
alokator/: CMakeLists.txt  heap.c  heap.h  unit_test_v2.c
fat12/: file_reader.c  file_reader.h  main.c  tested_declarations.h  unit_test_v2.c
oracle pl sql/: SprawozdanieROBD.docx  bazka.sql
psio/Program/: carpark_view.py  license_plates.txt  parking_coords.json
scr1/: main.c
shopping list/: Category.java
